// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error page 1`] = `<ArticleListPageError />`;

exports[`2. a loading state 1`] = `
<authorArticlesWithImagesProvider>
  <Helmet>
    <title>
      
       | The Times & The Sunday Times
    </title>
    <meta
      content="Get up to date information and read all the latest articles from ."
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        isLoading={true}
        jobTitle=""
        name=""
        twitter=""
        uri=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={0}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    page={1}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`3. an article list with images 1`] = `
<authorArticlesWithImagesProvider>
  <Helmet>
    <title>
      Name
       | The Times & The Sunday Times
    </title>
    <meta
      content="Camilla Long"
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`4. an article list without images 1`] = `
<authorArticlesNoImagesProvider>
  <Helmet>
    <title>
      Name
       | The Times & The Sunday Times
    </title>
    <meta
      content="Camilla Long"
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.5}
    page={1}
    pageSize={12}
    showImages={false}
  />
</authorArticlesNoImagesProvider>
`;

exports[`5. fetches more articles 1`] = `
<authorArticlesWithImagesProvider>
  <Helmet>
    <title>
      Name
       | The Times & The Sunday Times
    </title>
    <meta
      content="Camilla Long"
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
        Object {
          "headline": "Headline 3",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40h",
          "url": "https://article3.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`6. fetches more articles and falls back to previous data if no more 1`] = `
<authorArticlesNoImagesProvider>
  <Helmet>
    <title>
      Name
       | The Times & The Sunday Times
    </title>
    <meta
      content="Camilla Long"
      name="description"
    />
  </Helmet>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.5}
    page={2}
    pageSize={10}
    showImages={false}
  />
</authorArticlesNoImagesProvider>
`;

exports[`7. an article list header 1`] = `
<div>
  <div>
    <div>
      <div>
        <Image
          accessibilityLabel="author-image"
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
      <h1
        aria-level="1"
        role="heading"
      >
        Name
      </h1>
      <h2
        aria-level="2"
        role="heading"
      >
        job title
      </h2>
      <div>
        <div>
          <IconTwitter
            height={15}
            width={15}
          />
        </div>
        <TextLink
          testID="twitterLink"
          url="https://twitter.com/twitter"
        >
          @
          twitter
        </TextLink>
      </div>
      <div>
        <div>
          Camilla Long
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`8. an article list header with no bio, job title, name or twitter 1`] = `
<div>
  <div>
    <div>
      <div>
        <Image
          accessibilityLabel="author-image"
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`9. an article list header loading 1`] = `
<div>
  <div>
    <div>
      <Gradient />
    </div>
  </div>
</div>
`;

exports[`10. an article list header only changes on loading state change 1`] = `
<div>
  <div>
    <div>
      <Gradient />
    </div>
  </div>
</div>
`;

exports[`10. an article list header only changes on loading state change 2`] = `
<div>
  <div>
    <div>
      <h2
        aria-level="2"
        role="heading"
      >
        title 1
      </h2>
      <div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`10. an article list header only changes on loading state change 3`] = `
<div>
  <div>
    <div>
      <h2
        aria-level="2"
        role="heading"
      >
        title 1
      </h2>
      <div>
        <div />
      </div>
    </div>
  </div>
</div>
`;
